--- a/index.html
+++ b/index.html
@@ -20,12 +20,46 @@
             background-color: #fff;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            position: relative;
+        }
+        .image-container {
+            margin-bottom: 20px;
+        }
+        .image-container img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 8px;
         }
         h1 {
             color: #333;
+            margin-bottom: 10px;
         }
         p {
             color: #666;
+            margin-bottom: 10px;
+        }
+        .telegram-button {
+            display: inline-block;
+            padding: 8px 16px;
+            font-size: 14px;
+            color: #fff;
+            background-color: #2ca5e0;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            text-decoration: none;
+            margin-bottom: 10px;
+        }
+        .telegram-button img {
+            width: 20px;
+            height: 20px;
+            vertical-align: middle;
+        }
+        .zoom-text {
+            font-size: 1.2em;
+            color: #333;
+            margin-bottom: 20px;
+            animation: heartbeat 1.5s infinite ease-in-out;
         }
         .redirect-button {
             padding: 12px 24px;
@@ -35,17 +69,32 @@
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            text-decoration: none; /* Para usarlo como enlace */
+            text-decoration: none;
             display: inline-block;
-            margin-top: 20px;
+        }
+        @keyframes heartbeat {
+            0%, 100% {
+                transform: scale(1);
+            }
+            50% {
+                transform: scale(1.1);
+            }
         }
     </style>
 </head>
 <body>
     <div class="container">
+        <div class="image-container">
+            <img src="your-image-url.jpg" alt="Imagen">
+        </div>
         <h1>Este enlace se abrirá en tu navegador</h1>
-        <p>Haz clic en el botón de abajo para ser redirigido.</p>
-        <a href="https://xupercool-1.vercel.app/" class="redirect-button" target="_blank">Abrir en navegador externo</a>
+        <p>Haz clic en el botón de abajo para ser redirigido. Si deseas abrirlo en Brave, por favor copia el enlace y pégalo en Brave.</p>
+        <a href="your-telegram-group-link" class="telegram-button" target="_blank">
+            <img src="telegram-icon.png" alt="Telegram">
+            Únete al grupo
+        </a>
+        <p class="zoom-text">¡No te pierdas nuestras actualizaciones!</p>
+        <a href="https://xuperplay.github.io/XUPERCOOL1/" class="redirect-button" target="_blank">Abrir en navegador externo</a>
     </div>
 </body>
 </html>
