--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <body>
     <div class="container">
         <div class="image-container">
-            <img src="your-image-url.jpg" alt="Imagen">
+            <img src="https://i.postimg.cc/sDYmVHJD/logo8-19-192246.png" alt="Imagen">
         </div>
         <h1>Este enlace se abrirá en tu navegador</h1>
         <p>Haz clic en el botón de abajo para ser redirigido. Si deseas abrirlo en Brave, por favor copia el enlace y pégalo en Brave.</p>
