--- a/index.html
+++ b/index.html
@@ -87,13 +87,14 @@
         <div class="image-container">
             <img src="https://i.postimg.cc/sDYmVHJD/logo8-19-192246.png" alt="Imagen">
         </div>
-        <h1>Este enlace se abrirá en tu navegador</h1>
-        <p>Haz clic en el botón de abajo para ser redirigido. Si deseas abrirlo en Brave, por favor copia el enlace y pégalo en Brave.</p>
-        <a href="your-telegram-group-link" class="telegram-button" target="_blank">
-            <img src="telegram-icon.png" alt="Telegram">
-            Únete al grupo
+        <h1>Tv Mundial En Web</h1>
+        <p>Para una Mejor Visualización Utiliza Vpn</p>
+        <a href="https://t.me/+dfpRtJbQEGM3OWE0" class="telegram-button" target="_blank">
+            <img src="https://i.postimg.cc/Hs4x4wkZ/representacion-3d-telegram-redes-sociales-304434-713-removebg-preview.png" alt="Telegram">
+            Únete Al Group Xuperlist 
         </a>
-        <p class="zoom-text">¡No te pierdas nuestras actualizaciones!</p>
+        <p class="zoom-text">1-Activa Un Vpn(Mejor Opcion Países Bajos)</p>
+        <p class="zoom-text">2-Abrir Con Navegador Brave U Opera</p>
         <a href="https://xuperplay.github.io/XUPERCOOL1/" class="redirect-button" target="_blank">Abrir en navegador externo</a>
     </div>
 </body>
