--- a/index.html
+++ b/index.html
@@ -88,12 +88,13 @@
             <img src="https://i.postimg.cc/sDYmVHJD/logo8-19-192246.png" alt="Imagen">
         </div>
         <h1>Tv Mundial En Web</h1>
-        <p>Para una Mejor Visualización Utiliza Vpn</p>
+        <p>By * ᘜᖇOᑌᑭ ᙭ᑌᑭᗴᖇᒪIՏT © *</p>
         <a href="https://t.me/+dfpRtJbQEGM3OWE0" class="telegram-button" target="_blank">
             <img src="https://i.postimg.cc/Hs4x4wkZ/representacion-3d-telegram-redes-sociales-304434-713-removebg-preview.png" alt="Telegram">
             Únete Al Group Xuperlist 
         </a>
-        <p class="zoom-text">1-Activa Un Vpn(Mejor Opcion Países Bajos)</p>
+        <p class="zoom-text">1-Activa Un Vpn</p>
+        <p class="zoom-text">(Mejor Opcion Países Bajos)</p>
         <p class="zoom-text">2-Abrir Con Navegador Brave U Opera</p>
         <a href="https://xuperplay.github.io/XUPERCOOL1/" class="redirect-button" target="_blank">Abrir en navegador externo</a>
     </div>
