--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
         </a>
         <p class="zoom-text">1-Activa Un Vpn</p>
         <p class="zoom-text">(Mejor Opcion Países Bajos)</p>
-        <p class="zoom-text">2-Abrir Con Navegador Brave U Opera</p>
-        <a href="https://xuperplay.github.io/XUPERCOOL1/" class="redirect-button" target="_blank">Abrir en navegador externo</a>
+        <p class="zoom-text">2-Abrir Con Navegador Brave u Opera</p>
+        <a href="https://xuperplay.github.io/XUPERCOOL1/" class="redirect-button" target="_blank">👉 Link Aqui 👈</a>
     </div>
 </body>
 </html>
