--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
             <img src="https://i.postimg.cc/sDYmVHJD/logo8-19-192246.png" alt="Imagen">
         </div>
         <h1>Tv Mundial En Web</h1>
-        <p>By * ᘜᖇOᑌᑭ ᙭ᑌᑭᗴᖇᒪIՏT © *</p>
+        <p>👇By * ᘜᖇOᑌᑭ ᙭ᑌᑭᗴᖇᒪIՏT © *👇</p>
         <a href="https://t.me/+dfpRtJbQEGM3OWE0" class="telegram-button" target="_blank">
             <img src="https://i.postimg.cc/Hs4x4wkZ/representacion-3d-telegram-redes-sociales-304434-713-removebg-preview.png" alt="Telegram">
-            Únete Al Group Xuperlist 
+            Únete Al ᘜᖇOᑌᑭ ᙭ᑌᑭᗴᖇᒪIՏT 
         </a>
         <p class="zoom-text">1-Activa Un Vpn</p>
         <p class="zoom-text">(Mejor Opcion Países Bajos)</p>
