--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <p class="zoom-text">1-Activa Un Vpn</p>
         <p class="zoom-text">(Mejor Opcion Países Bajos)</p>
         <p class="zoom-text">2-IMPORTANTE : Abrir Con Navegador Brave</p>
-        <a href="https://xuperplay.github.io/XUPERCOOL1/" class="redirect-button" target="_blank">👉 LINK AQUÍ 👈</a>
+        <a href="https://xupercool-1.vercel.app/ class="redirect-button" target="_blank">👉 LINK AQUÍ 👈</a>
     </div>
 </body>
 </html>
