--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <img src="https://i.postimg.cc/Hs4x4wkZ/representacion-3d-telegram-redes-sociales-304434-713-removebg-preview.png" alt="Telegram">
             Únete Al ᘜᖇOᑌᑭ ᙭ᑌᑭᗴᖇᒪIՏT 
         </a>
-        <p class="zoom-text">1-Activa Un Vpn</p>
+        <p class="zoom-text">1-Si No Te Funciona Activa Un Vpn</p>
         <p class="zoom-text">(Mejor Opcion Países Bajos)</p>
         <p class="zoom-text">2-IMPORTANTE : Abrir Con Navegador Brave</p>
         <a href="https://xupercool-1.vercel.app/" class="redirect-button" target="_blank">👉 LINK AQUÍ 👈</a>
